# apps.home.ug-nfc-efl

./: .gitignore  AUTHOR  CMakeLists.txt  NOTICE
debian/: changelog  control  libug-setting-nfc-efl.postinst  libug-share-nfc-efl.install.in  libug-share-nfc-efl.postinst  rules
packaging/: libug-setting-nfc-efl.install.in  libug-share-nfc-efl.install.in  ug-nfc-efl.spec
ug-nfc-setting-efl/: CMakeLists.txt  sysinfo-nfc-ug.xml  ug-setting-nfc-efl.xml  ug.setting-nfc-efl.include
ug-nfc-setting-efl/data/edc/: ug-nfc-setting-efl.edc  ug-setting-nfc-efl.edc
ug-nfc-setting-efl/include/: ug-nfc-setting-db.h  ug-nfc-setting-main.h  ug-nfc-setting-popup.h
ug-nfc-setting-efl/po/: CMakeLists.txt  POTFILES.in  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  de_DE.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_MX.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  mn_MN.po  nb.po  nl.po  (+17 more)
ug-nfc-setting-efl/src/: ug-nfc-setting-db.c  ug-nfc-setting-main.c  ug-nfc-setting-popup.c  ug-nfc-setting-predefined-item.c  ug-nfc-setting-secure-storage.c
ug-nfc-share-efl/: CMakeLists.txt  ug.share-nfc-efl.include
ug-nfc-share-efl/data/edc/: ug-nfc-share-efl.edc  ug-share-nfc-efl.edc
ug-nfc-share-efl/include/: ug-nfc-share-common-debug.h  ug-nfc-share-common-error.h  ug-nfc-share-common-util.h  ug-nfc-share-main.h  ug-nfc-share-popup.h  ug-nfc-share-tag.h
ug-nfc-share-efl/po/: CMakeLists.txt  ar.po  bg.po  ca.po  cs.po  da.po  de_DE.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  et.po  eu.po  fi.po  fr_FR.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  ms.po  nb.po  nl_NL.po  no.po  pl.po  pt_PT.po  ro.po  (+13 more)
ug-nfc-share-efl/src/: ug-nfc-share-common-util.c  ug-nfc-share-main.c  ug-nfc-share-popup.c  ug-nfc-share-tag.c
